ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.12
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2016-09-19
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug was recently introduced on master. It does not affect 3.3.10.

      Note: You must start the server with --setParameter enableTestCommands=1 to reproduce the bug because stageDebug is a test command.

      E -        [conn1] Uncaught std::exception: basic_string, terminating
      

            Assignee:
            David Storch
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: