SERVER-25377 check type of ixscan 'name' field in stageDebug command